2003-02-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: New module gedit-plugins. Added to
	2.2-extras.

2003-02-24  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* translation-status.xml: Correct anjuta modules to give
		the correct status for gnome-1.4 (ANJUTA_1_0_0 branch)
		gnome-2.2 anjuta (HEAD branch)
		New project anjuta2 (different module, HEAD branch)

2003-02-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched. Reflect this.

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Readded GNOME 1.4 guikachu

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Moved ggv && gnome-themes to desktop group.

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Fixed guikachu release name

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Removed gnomoku, gnorpm & gnome-utils from GNOME
	1.4 release and moved guikachu to GNOME 2.0

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Fixed procman branch and minor bugs.

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml, translation-status.dtd: Updated to latest
	version.
	* status/*: Removed. When I cleanup the new code it will be readded
	there.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gtkdial and gwvedit from
	gnome-i18n.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gnapster from gnome-i18n.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed toutdoux from gnome-i18n.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gnome-find from gnome-i18n.

2003-02-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-session has been branched.
	Reflect	this.

2003-02-14  Christian Rose  <menthos@menthos.com>
