@@ -1828,17 +1828,6 @@
       </component>
     </version>
   </module>
-  <module name="ludwig">
-    <version release="gnome-2.2">
-      <component name="ludwig" dir="ludwig" group="extras">
-	<podir dir="po"/>
-	<potname name="Ludwig_van.pot"/>
-	<branch name="gnome-2-0"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="magicdev">
     <version release="gnome-1.4">
       <component name="magicdev" dir="magicdev" group="extras">
