@@ -1,5 +1,9 @@
 2003-02-25  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed ludwig. It looks dead.
+
+2003-02-25  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: New module gedit-plugins. Added to
 	2.2-extras.
 
